fix some more tests